@@ -30,12 +30,12 @@ export(
        despike,
        detrend,
        drawIsopycnals,
-       drawpalette,
+       drawPalette,
        enuToOther,
        enuToOtherAdp,
        enuToOtherAdv,
        fillGap,
-       formatci,
+       formatCI,
        fullFilename,
        geodDist,
        geodXy,
@@ -44,7 +44,7 @@ export(
        header,
        imagep,
        interpBarnes,
-       integer2ascii,
+       integerToAscii,
        is.beam,
        is.xyz,
        is.enu,
@@ -59,7 +59,7 @@ export(
        matchBytes,
        matrixSmooth,
        numberAsPOSIXct,
-       oce.approx,
+       oceApprox,
        oce.as.POSIXlt,
        oce.axis.POSIXct,
        oceBisect,
@@ -97,7 +97,7 @@ export(
        ptPatm,
        ptTrim,
        pwelch,
-       rangelimit,
+       rangeLimit,
        read.adp,
        read.adp.rdi,
        read.adp.nortek,
