@@ -1,6 +1,6 @@
-\name{ctd.raw}
+\name{ctdRaw}
 \docType{data}
-\alias{ctd.raw}
+\alias{ctdRaw}
 \title{Seawater CTD profile, without trimming of extraneous data}
 
 \description{This is sample CTD profile provided for testing.  It
@@ -11,7 +11,7 @@
   a good example of data that need trimming with
   \code{\link{ctdTrim}}.}
 
-\usage{data(ctd.raw)}
+\usage{data(ctdRaw)}
 \source{The data were acquired near the centre of 
 the Bedford Basin of the Halifax Harbour, during an 
 October 2003 field trip of Dalhousie University's 
